...
                // 入力済み情報のバッジ部分 (タップでクイックメニューへ)
                Box(
                    modifier = Modifier
                        .clip(MaterialTheme.shapes.small)
                        .clickable(onClick = { onAction(MainUiAction.QuickMenuClick(person)) })
                        .padding(4.dp)
                        .testTag("UserListItem_QuickMenuBox")
                ) {
                    CategoryBadges(summary = summary ?: PersonCategorySummary())
                }

                // 本日/近日誕生日の場合に表示されるアイコン
                Box(
...
